@@ -2,6 +2,7 @@ package pizza;
 
 import com.github.freva.asciitable.AsciiTable;
 import com.github.freva.asciitable.Column;
+import com.github.freva.asciitable.ColumnData;
 import com.github.freva.asciitable.HorizontalAlign;
 import pizza.customer.Customer;
 import pizza.customer.CustomerService;
@@ -11,10 +12,13 @@ import pizza.product.Product;
 import pizza.product.ProductService;
 import summer.BeanContainer;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
+
+import static com.github.freva.asciitable.HorizontalAlign.LEFT;
+import static com.github.freva.asciitable.HorizontalAlign.RIGHT;
 
 public class PizzaApp {
 
@@ -35,23 +39,21 @@ public class PizzaApp {
         OrderService orderService = beanContainer.getBean(OrderService.class);
 
         // Work with the data:
-        var products = toList(productService.getAllProducts());
-        System.out.println("\nProducts:");
-        System.out.println(AsciiTable.getTable(products, Arrays.asList(
-                new Column().header("ID").headerAlign(HorizontalAlign.RIGHT).dataAlign(HorizontalAlign.RIGHT).with(Product::getProductId),
-                new Column().header("Name").headerAlign(HorizontalAlign.LEFT).dataAlign(HorizontalAlign.LEFT).with(Product::getName),
-                new Column().header("Price").headerAlign(HorizontalAlign.RIGHT).dataAlign(HorizontalAlign.RIGHT).with(p -> String.format("%.2f EUR", p.getPrice()))
-        )));
+        var products = productService.getAllProducts();
+        printTable("Products", products, List.of(
+                column("ID", RIGHT, Product::getProductId),
+                column("Name", LEFT, Product::getName),
+                column("Price", RIGHT, p -> String.format("%.2f EUR", p.getPrice()))
+        ));
 
-        var customers = toList(customerService.getAllCustomers());
-        System.out.println("\nCustomers:");
-        System.out.println(AsciiTable.getTable(customers, Arrays.asList(
-                new Column().header("ID").headerAlign(HorizontalAlign.RIGHT).dataAlign(HorizontalAlign.RIGHT).with(c -> String.valueOf(c.getId())),
-                new Column().header("Name").headerAlign(HorizontalAlign.LEFT).dataAlign(HorizontalAlign.LEFT).with(Customer::getFullName),
-                new Column().header("Phone").headerAlign(HorizontalAlign.LEFT).dataAlign(HorizontalAlign.LEFT).with(Customer::getPhoneNumber),
-                new Column().header("Address").headerAlign(HorizontalAlign.LEFT).dataAlign(HorizontalAlign.LEFT).with(c ->
+        var customers = customerService.getAllCustomers();
+        printTable("Customers", customers, List.of(
+                column("ID", RIGHT, c -> String.valueOf(c.getId())),
+                column("Name", LEFT, Customer::getFullName),
+                column("Phone", LEFT, Customer::getPhoneNumber),
+                column("Address", LEFT, c ->
                         c.getAddress().getStreet() + ", " + c.getAddress().getPostalCode() + " " + c.getAddress().getCity())
-        )));
+        ));
 
         if (!products.isEmpty() && !customers.isEmpty()) {
             var order = orderService.placeOrder(
@@ -59,20 +61,22 @@ public class PizzaApp {
                     Map.of(products.get(0).getProductId(), 2,
                             products.get(products.size() > 1 ? 1 : 0).getProductId(), 1)
             );
-            System.out.println("\nOrder placed:");
-            System.out.println(AsciiTable.getTable(List.of(order), Arrays.asList(
-                    new Column().header("ID").headerAlign(HorizontalAlign.RIGHT).dataAlign(HorizontalAlign.RIGHT).with(o -> String.valueOf(o.getId())),
-                    new Column().header("Customer").headerAlign(HorizontalAlign.LEFT).dataAlign(HorizontalAlign.LEFT).with(o -> o.getCustomer().getFullName()),
-                    new Column().header("Total").headerAlign(HorizontalAlign.RIGHT).dataAlign(HorizontalAlign.RIGHT).with(o -> String.format("%.2f EUR", o.getTotalPrice())),
-                    new Column().header("Est. Delivery").headerAlign(HorizontalAlign.LEFT).dataAlign(HorizontalAlign.LEFT).with(o -> o.getEstimatedTimeOfDelivery().toLocalTime().toString())
-            )));
+            printTable("Order placed", List.of(order), List.of(
+                    column("ID", RIGHT, o -> String.valueOf(o.getId())),
+                    column("Customer", LEFT, o -> o.getCustomer().getFullName()),
+                    column("Total", RIGHT, o -> String.format("%.2f EUR", o.getTotalPrice())),
+                    column("Est. Delivery", LEFT, o -> o.getEstimatedTimeOfDelivery().toLocalTime().toString())
+            ));
         }
     }
 
-    static <T> List<T> toList(Iterable<T> iterable) {
-        var list = new ArrayList<T>();
-        iterable.forEach(list::add);
-        return list;
+    private static <T> void printTable(String title, Collection<T> data, List<ColumnData<T>> columns) {
+        System.out.println("\n" + title + ":");
+        System.out.println(AsciiTable.getTable(data, columns));
+    }
+
+    private static <T> ColumnData<T> column(String header, HorizontalAlign align, Function<T, String> extractor) {
+        return new Column().header(header).headerAlign(align).dataAlign(align).with(extractor);
     }
 
 }
